# mps-alfi-samples

./: .gitattributes  README.md  build.gradle  build.xml
.github/workflows/: github-actions-integration.yaml  github-actions-release.yaml  workflow-build.yaml
.mps/: modules.xml  vcs.xml
alf-lib/: Testing.alf
alf-lib/Testing/: AssertEqual.alf  AssertFalse.alf  AssertTrue.alf
devkits/HamsterSimulatorLanguage.devkit/: HamsterSimulatorLanguage.devkit.devkit
devkits/SoftwareComponentLanguage.devkit/: SoftwareComponentLanguage.devkit.devkit
gradle/: download-mps.gradle  run-mps-ant.gradle
gradle/alfi/: download-install-alf.gradle  install-alf.gradle  package-generated-code.gradle  run-alfi-samples-alf.gradle  run-alfi-samples-cpp.gradle  run-alfi-samples-cs.gradle  run-alfi-samples-java.gradle  run-alfi-samples.gradle  setup-alf-workspace.gradle
languages/HamsterSimulatorLanguage/: HamsterSimulatorLanguage.mpl
languages/HamsterSimulatorLanguage.sandbox/: .gitignore  CMakeLists.txt  HamsterSimulatorLanguage.sandbox.msd
languages/HamsterSimulatorLanguage.sandbox/models/: HamsterSimulatorLanguage.sandbox.mps  HamsterSimulatorLanguage.sandbox@genplan.mps
languages/HamsterSimulatorLanguage.sandbox/source_gen/HamsterSimulatorLanguage/sandbox/: ActivityDemoMain.cpp  ActivityDemoMain.cs  ActivityDemoMain.h  ActivityDemoMain.java  ActivityDemoMain_main.cpp  ActivityHelloPauleMain.cpp  ActivityHelloPauleMain.cs  ActivityHelloPauleMain.h  ActivityHelloPauleMain.java  ActivityHelloPauleMain_main.cpp  DemoHamsterProgram.alf  DemoHamsterProgram.cpp  DemoHamsterProgram.cs  DemoHamsterProgram.h  DemoHamsterProgram.java  DemoMain.alf  HamsterLibrary.alf  HamsterSimulatorLanguage.sandbox.all.props  HamsterSimulatorLanguage.sandbox.cmake  HamsterSimulatorLanguage.sandbox.sources.props  HamsterSimulatorLanguage.sandbox.tests.cmake  HamsterSimulatorLanguage.sandbox.tests.props  HamsterTestSuite.alf  HamsterTestSuite.cpp  HamsterTestSuite.cs  HamsterTestSuite_Test.java  HelloPauleHamsterProgram.alf  HelloPauleHamsterProgram.cpp  HelloPauleHamsterProgram.cs  HelloPauleHamsterProgram.h  HelloPauleHamsterProgram.java  HelloPauleMain.alf  Testing.alf  trace.info
languages/HamsterSimulatorLanguage.sandbox/source_gen/HamsterSimulatorLanguage/sandbox/HamsterLibrary/: Cell.alf  Cell.cs  Cell.h  Cell.java  Direction.alf  Direction.cs  Direction.h  Direction.java  Hamster.alf  Hamster.cpp  Hamster.cs  Hamster.h  Hamster.java  HamsterProgramBase.alf  HamsterProgramBase.cpp  HamsterProgramBase.cs  HamsterProgramBase.h  HamsterProgramBase.java  Row.alf  Row.cpp  Row.cs  Row.h  Row.java  Territory.alf  Territory.cpp  Territory.cs  Territory.h  Territory.java
languages/HamsterSimulatorLanguage.sandbox/source_gen/HamsterSimulatorLanguage/sandbox/Testing/: AssertEqual.java  AssertEqualWithMessage.cs  AssertEqualWithMessage.java  AssertFalse.java  AssertFalseWithMessage.cs  AssertFalseWithMessage.java  AssertTrue.cs  AssertTrue.java  AssertTrueWithMessage.java
languages/HamsterSimulatorLanguage/models/: HamsterSimulatorLanguage.behavior.mps  HamsterSimulatorLanguage.constraints.mps  HamsterSimulatorLanguage.editor.mps  HamsterSimulatorLanguage.intentions.mps  (+2 more)
languages/SoftwareComponentLanguage/: SoftwareComponentLanguage.mpl
languages/SoftwareComponentLanguage.runtime/: SoftwareComponentLanguage.runtime.msd
languages/SoftwareComponentLanguage.sandbox/: .gitignore  SoftwareComponentLanguage.sandbox.msd
scripts/hamster/cpp/: CMakeLists.txt
scripts/swc/cpp/: CMakeLists.txt
solutions/AlfiSamples.genplan/: AlfiSamples.genplan.msd
solutions/HamsterSimulatorLanguage.runtime/: HamsterSimulatorLanguage.runtime.msd
solutions/mps-alfi-samples.build/: mps-alfi-samples.build.msd
(+124 files in other folders)
